<resources>
    <string name="app_name">Vihang</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">Let\'s get you started!</string>
    <string name="name_hint">What should I call you?</string>
    <string name="text_continue">Continue</string>
    <string name="name_message">This name will be used across the app so choose wisely!</string>
    <string name="home_welcome">Welcome %1$s!</string>
    <string name="fun_fact">Fun Fact</string>
    <string name="fun_fact_body">%1$s</string>
    <string name="settings_title">Settings</string>
    <string name="push_notifications_label">Push Notifications</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="one_last_step">One Last Step</string>
    <string name="permission_message">We need some permissions to continue</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="recycling_guides">Recycling Guides</string>
    <string name="general_recycling">General Recycling</string>
    <string name="recycling_plastics">Recycling Plastics</string>
    <string name="acceptable_items">Acceptable Items</string>
    <string name="unacceptable_items">Unacceptable items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycling_tip">Recycling Tip</string>
    <string name="nearby_recycling_centers">Nearby Recycling Centers</string>
    <string name="change_display_name_label">Change Display Name</string>
    <string name="change_name_hint">What\'s your new name?</string>
    <string name="submit_button">Submit Button</string>
    <string name="un_sdg">United Nations SDG</string>
</resources>