<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vihang.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_guides"
        android:name="com.example.vihang.ui.guides.GuidesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_guides" >
        <action
            android:id="@+id/navigate_to_guideDetailsFragment"
            app:destination="@id/guideDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.vihang.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/navigate_to_changeNameFragment"
            app:destination="@id/changeNameFragment" />
    </fragment>
    <fragment
        android:id="@+id/changeNameFragment"
        android:name="com.example.vihang.ChangeNameFragment"
        android:label="fragment_change_name"
        tools:layout="@layout/fragment_change_name" >
        <action
            android:id="@+id/navigate_to_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
    <fragment
        android:id="@+id/guideDetailsFragment"
        android:name="com.example.vihang.GuideDetailsFragment"
        android:label="fragment_guide_details"
        tools:layout="@layout/fragment_guide_details" >
        <action
            android:id="@+id/navigate_to_navigation_guides"
            app:destination="@id/navigation_guides" />
    </fragment>
</navigation>