<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.GuidesFragment">

    <TextView
        android:id="@+id/tv_guidestitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/recycling_guides"
        android:textSize="28sp"
        android:textStyle="italic" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_marginTop="24dp"
        app:alignmentMode="alignMargins"
        app:columnCount="2"
        app:columnOrderPreserved="false"
        app:rowCount="3">

        <androidx.cardview.widget.CardView
            id="@+id/card_generalrecycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="3dp" >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:padding="30dp"
                android:src="@drawable/recycle_svgrepo_com"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:layout_gravity="bottom|center"
                android:textAlignment="center"
                android:text="@string/general_recycling"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_plasticrecycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp" >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:padding="20dp"
                android:src="@drawable/plastic_bottle_2_svgrepo_com"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:layout_gravity="bottom|center"
                android:textAlignment="center"
                android:text="@string/recycling_plastics"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_acceptableitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_columnWeight="0"
            app:layout_rowWeight="0">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="20dp"
                android:layout_gravity="center"
                android:src="@drawable/tick_circle_svgrepo_com"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:layout_gravity="bottom|center"
                android:textAlignment="center"
                android:text="@string/acceptable_items"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_unacceptableitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_columnWeight="0"
            app:layout_rowWeight="0">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="28dp"
                android:layout_gravity="center"
                android:src="@drawable/cross_circle_svgrepo_com"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:layout_gravity="bottom|center"
                android:textAlignment="center"
                android:text="@string/unacceptable_items"/>

        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>