<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/settings_title"
        android:textSize="28sp"
        android:textStyle="italic" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:alignmentMode="alignMargins"
        app:columnCount="2"
        app:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_pushnotifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="0.5">

            <ImageView
                android:id="@+id/iv_notifications"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="36dp"
                android:src="@drawable/outline_circle_notifications_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:padding="6dp"
                android:text="@string/push_notifications_label"
                android:textAlignment="center"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_changename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="0.5">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="30dp"
                android:src="@drawable/round_edit_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:padding="6dp"
                android:text="@string/change_display_name_label"
                android:textAlignment="center"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>